Archive2/e2/a6205565c675fc/output
main.cpp: In function 'int main()':
main.cpp:85:46: error: wrong number of template arguments (0, should be 1)
    std::cout << compare( s, r, std::equal_to<>() ) << std::endl;
                                              ^
In file included from /usr/local/include/c++/4.8.2/functional:49:0,
                 from main.cpp:11:
/usr/local/include/c++/4.8.2/bits/stl_function.h:204:12: error: provided for 'template<class _Tp> struct std::equal_to'
     struct equal_to : public binary_function<_Tp, _Tp, bool>
            ^
